--- a/package.json
+++ b/package.json
@@ -1,21 +1,77 @@
 {
   "name": "react-native-starter-kit",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "private": true,
+  "main": "src/app.tsx",
+  "engines": {
+    "node": "18",
+    "npm": "9"
+  },
+  "engineStrict": true,
   "scripts": {
+    "prepare": "husky install",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "expo-build-ios": "eas build --platform ios",
+    "expo-build-android": "eas build --platform android",
+    "expo-build-all": "eas build --platform all",
+    "expo-submit-ios": "eas submit --platform ios",
+    "expo-submit-android": "eas submit --platform android",
+    "expo-submit-all": "eas submit --platform all",
+    "expo-build-ci-ios": "eas build --profile production --platform ios --auto-submit --non-interactive",
+    "expo-build-ci-android": "eas build --profile production --platform android --auto-submit --non-interactive",
+    "expo-build-ci-all": "eas build --profile production --platform all --auto-submit --non-interactive",
+    "expo-dev-build-ios": "eas build --profile development --platform ios",
+    "expo-dev-build-android": "eas build --profile development --platform android"
+  },
+  "prettier": {
+    "useTabs": true,
+    "trailingComma": "es5",
+    "printWidth": 120
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "dependencies": {
+    "@expo/metro-runtime": "^2.2.14",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
+    "expo-device": "~5.4.0",
+    "expo-image": "~1.3.5",
+    "expo-notifications": "~0.20.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@babel/core": "^7.20.0",
+    "@commitlint/cli": "^18.4.1",
+    "@commitlint/config-conventional": "^18.4.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/lodash": "^4.14.201",
+    "@types/redux-logger": "^3.0.12",
+    "husky": "^8.0.3",
+    "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.1.0"
+  }
 }
