--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "prepare": "husky install",
     "start": "expo start",
+    "start-tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
