chore: remove project id

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "4145dc2e-fec1-4e0e-bd0a-99873500ce0f"
+        "projectId": ""
       }
     }
   }
