--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native": "0.72.6",
     "react-native-flash-message": "^0.4.2",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux-logger": "^3.0.6",
